[package]
name = "sayaka"
version = "0.1.0"
edition = "2024"
authors = ["Dawei Feng <feng@darkv.cn>"]
description = "some simple colorful debugging functions"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.40"
once_cell = "1.21.3"
colored = "3.0.0"

[dev-dependencies]
colored = "3.0.0"